# cookiecutter-autotools-cpp

./: README.md  cookiecutter.json
{{ cookiecutter.app_name }}/: Makefile.am  README.md  autogen.sh  configure.ac
{{ cookiecutter.app_name }}/{{ cookiecutter.feature }}/: Makefile.am  {{ cookiecutter.__feature_file_name }}.cpp  {{ cookiecutter.feature_file_name }}.cpp  {{ cookiecutter.feature_file_name }}.h
{{ cookiecutter.app_name }}/{{ cookiecutter.src }}/: Makefile.am  {{ cookiecutter.help_file_name }}.cpp  {{ cookiecutter.help_file_name }}.h  {{ cookiecutter.main }}.cpp
